white spacing + css links fixed

--- a/src/styles/Balance.css
+++ b/src/styles/Balance.css
@@ -89,7 +89,7 @@
 .balance__selectArrows {
   width: 31px;
   height: 100%;
-  background: url("icons/arrows.png"),
+  background: url("../assets/icons/arrows.png"),
     linear-gradient(
       180deg,
       rgba(87, 48, 179, 0) 0%,
